--- a/.gitignore
+++ b/.gitignore
@@ -88,7 +88,7 @@
 ################################################
 
 node_modules
-
+public/scss/.sass-cache
 
 ################################################
 #
