--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "homepage": "https://github.com/icomp-felipe/progweb2#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.3.1",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.10.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
     "handlebars-helpers": "^0.10.0",
     "jquery": "^3.4.1",
     "morgan": "^1.9.1",
@@ -35,6 +37,7 @@
     "popper.js": "^1.16.0",
     "sequelize": "^5.19.7",
     "sequelize-cli": "^5.5.1",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "uuid": "^3.3.3"
   }
 }
