--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sequelize": "^5.19.7",
     "sequelize-cli": "^5.5.1",
     "serve-favicon": "^2.5.0",
+    "socket.io": "^2.3.0",
     "uuid": "^3.3.3"
   }
 }
