--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/icomp-felipe/progweb2#readme",
   "dependencies": {
+    "@chrisoakman/chessboardjs": "^1.0.0",
     "@fortawesome/fontawesome-free": "^5.11.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "chess.js": "^0.10.2",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.10.0",
     "express": "^4.17.1",
